--- a/Mercurio.Tests/Mercurio.Tests.csproj
+++ b/Mercurio.Tests/Mercurio.Tests.csproj
@@ -23,6 +23,7 @@
         </PackageReference>
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
+        <PackageReference Include="NunitXml.TestLogger" Version="6.1.0" />
     </ItemGroup>
 
     <ItemGroup>
