--- a/.github/workflows/CodeQuality.yml
+++ b/.github/workflows/CodeQuality.yml
@@ -13,12 +13,20 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
           overwrite-settings: false
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Initialize RabbitMQ
+        run: docker run -d --name mercurio -p 15672:15672 -p 5672:5672 rabbitmq:4-management 
+
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
@@ -45,3 +53,6 @@ jobs:
         run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Docker stop
+        run: docker stop mercurio && docker rm mercurio
