--- a/Mercurio/Mercurio.csproj
+++ b/Mercurio/Mercurio.csproj
@@ -4,7 +4,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>1.1.0</Version>
+        <Version>1.2.0</Version>
         <LangVersion>12.0</LangVersion>
         <Company>Starion Group S.A.</Company>
         <Copyright>Copyright © Starion Group S.A.</Copyright>
@@ -25,7 +25,7 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageTags>RabbitMQ</PackageTags>
         <PackageReleaseNotes>
-            [ADD] Support of Topic Exchange
+            [ADD] RPC protocol implemented, available via IRpcClientService and IRpcServerService
         </PackageReleaseNotes>
     </PropertyGroup>
 
