--- a/Mercurio/Mercurio.csproj
+++ b/Mercurio/Mercurio.csproj
@@ -3,14 +3,14 @@
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>1.2.1</Version>
+        <TargetFrameworks>netstandard2.0;net9.0</TargetFrameworks>
+        <Version>1.2.2</Version>
         <LangVersion>12.0</LangVersion>
         <Company>Starion Group S.A.</Company>
         <Copyright>Copyright © Starion Group S.A.</Copyright>
         <PackageId>Mercurio</PackageId>
         <AssemblyTitle>Mercurio</AssemblyTitle>
-        <Title>uml4net</Title>
+        <Title>Mercurio</Title>
         <Description>A library to make RabbitMQ integration in .NET microservices seamless</Description>
         <RequireLicenseAcceptance>true</RequireLicenseAcceptance>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -25,7 +25,8 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageTags>RabbitMQ</PackageTags>
         <PackageReleaseNotes>
-            [ADD] Generate Documentation file
+            [FIX] Multiple Connection
+            [IMP] Channel Reuse using Channel Leasing and Channel Pooling
         </PackageReleaseNotes>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
@@ -44,4 +45,8 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="$(MSBuildProjectName).Tests" />
+        <InternalsVisibleTo Include="$(MSBuildProjectName).Tests.TUnit" />
+    </ItemGroup>
 </Project>
