--- a/Mercurio/Mercurio.csproj
+++ b/Mercurio/Mercurio.csproj
@@ -4,7 +4,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>1.2.1</Version>
+        <Version>1.2.2</Version>
         <LangVersion>12.0</LangVersion>
         <Company>Starion Group S.A.</Company>
         <Copyright>Copyright © Starion Group S.A.</Copyright>
@@ -24,6 +24,7 @@
         <Authors>Sam Gerené; Nathanael Smiechowski; Alexander Van Delft; Antoine Théate</Authors>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageTags>RabbitMQ</PackageTags>
+        <PackageIcon>mercurio-logo-strapline.png</PackageIcon>
         <PackageReleaseNotes>
             [ADD] Generate Documentation file
         </PackageReleaseNotes>
@@ -42,6 +43,7 @@
 
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\" />
+        <None Include="..\mercurio-logo-strapline.png" Pack="true" PackagePath="" />
     </ItemGroup>
 
 </Project>
