--- a/Mercurio/Mercurio.csproj
+++ b/Mercurio/Mercurio.csproj
@@ -24,7 +24,7 @@
         <Authors>Sam Gerené; Nathanael Smiechowski; Alexander Van Delft; Antoine Théate</Authors>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageTags>RabbitMQ</PackageTags>
-        <PackageIcon>mercurio-logo-strapline.png</PackageIcon>
+        <PackageIcon>mercurio-logo-ngget.png</PackageIcon>
         <PackageReleaseNotes>
             [FIX] Multiple Connection
             [IMP] Channel Reuse using Channel Leasing and Channel Pooling
@@ -33,22 +33,22 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.3.0" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
-      <PackageReference Include="Polly" Version="8.5.2" />
-      <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
-      <PackageReference Include="System.Reactive" Version="6.0.1" />
-      <PackageReference Include="System.Text.Json" Version="9.0.5" />
+        <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.3.0"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5"/>
+        <PackageReference Include="Polly" Version="8.5.2"/>
+        <PackageReference Include="RabbitMQ.Client" Version="7.1.2"/>
+        <PackageReference Include="System.Reactive" Version="6.0.1"/>
+        <PackageReference Include="System.Text.Json" Version="9.0.5"/>
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="..\README.md" Pack="true" PackagePath="\" />
-        <None Include="..\mercurio-logo-strapline.png" Pack="true" PackagePath="" />
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
+        <None Include="..\mercurio-logo-strapline.png" Pack="true" PackagePath=""/>
     </ItemGroup>
 
     <ItemGroup>
-        <InternalsVisibleTo Include="$(MSBuildProjectName).Tests" />
-        <InternalsVisibleTo Include="$(MSBuildProjectName).Tests.TUnit" />
+        <InternalsVisibleTo Include="$(MSBuildProjectName).Tests"/>
+        <InternalsVisibleTo Include="$(MSBuildProjectName).Tests.TUnit"/>
     </ItemGroup>
 </Project>
