--- a/Mercurio/Mercurio.csproj
+++ b/Mercurio/Mercurio.csproj
@@ -4,7 +4,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <TargetFrameworks>net9.0;net8.0;netstandard2.1</TargetFrameworks>
-        <Version>1.8.1</Version>
+        <Version>1.8.2</Version>
         <LangVersion>12.0</LangVersion>
         <Company>Starion Group S.A.</Company>
         <Copyright>Copyright © Starion Group S.A.</Copyright>
@@ -28,8 +28,8 @@
         <GenerateSBOM>true</GenerateSBOM>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <PackageReleaseNotes>
-            [Improve] null argument handling
-            [Refactor] StreamExtensions.ToReadOnlyMemory
+            [Improve] SQ code smells spotted
+            [Upgrade] Dependencies
         </PackageReleaseNotes>
     </PropertyGroup>
 
